--- a/info.html
+++ b/info.html
@@ -336,7 +336,7 @@
     }
 
     .faq-item {
-      background: #f7fafc;
+      background: #ffffff;
       border-radius: 8px;
       padding: 16px 20px;
       box-shadow: 0 1.5px 10px rgba(0, 0, 0, 0.05);
@@ -499,13 +499,13 @@
 
   <main role="main">
     <section aria-label="OEM向け情報 | OEM Information">
-      <div class="relative overflow-hidden group animate__animated animate__fadeIn" tabindex="0"
+      <div class="relative overflow-hidden group animate__animated animate__fadeInUp" tabindex="0"
         style="perspective: 1500px">
         <img src="./assets/images/info.webp" alt="OEM向け情報 メインビジュアル | OEM Information"
           class="w-full h-[640px] sm:h-[560px] md:h-[756px] object-cover select-none" />
         <!-- Centered Card Overlay -->
-        <div class="absolute left-1/2 top-[55%] sm:top-[65%] z-20 animate__fadeInDownBig"
-          animate="animate__fadeInDownBig" style="transform: translate(-50%, -50%)">
+        <div class="absolute left-1/2 top-[55%] sm:top-[65%] z-20 animate__fadeInUp"
+          animate="animate__fadeInUp" style="transform: translate(-50%, -50%)">
           <div
             class="relative flex flex-col place-items-center place-content-center items-center bg-[#505050]/50 backdrop-blur-[8.8px] rounded-lg shadow-xl px-8 py-4 w-[200px] h-[97px] md:w-[320px] md:h-[134px]">
             <div
@@ -532,7 +532,7 @@
           class="block w-[20px] sm:w-[30px] md:w-[50px] h-[1px] bg-gray-800 mx-auto mt-3 md:mt-8 animate-on-scroll opacity-0"
           data-animate="animate__fadeInUp" style="--animate-duration: 1s; --animate-delay: 0.35s"></span>
 
-        <p class="mt-2 md:mt-8 mx-auto max-w-[1440px] text-[11px] leading-[26px] xs:text-[12px] xs:leading-[28px] sm:text-[14px] sm:leading-[30px] md:text-[16px] md:leading-[34px] xl:text-[20px] xl:leading-[40px] tracking-[.1em] text-black animate-on-scroll opacity-0"
+        <p class="mt-2 md:mt-8 mx-auto max-w-[1440px] text-[11px] leading-[25px] xs:text-[12px] xs:leading-[28px] sm:text-[14px] sm:leading-[30px] md:text-[16px] md:leading-[34px] xl:text-[20px] xl:leading-[40px] tracking-[.1em] text-black animate-on-scroll opacity-0"
           data-animate="animate__fadeInUp" tabindex="0" style="--animate-duration: 1s">
           テワコーポレイションは、オーストラリア・デボラ湖由来のマグネシウムと、南太平洋・クリスマス島の天然塩という
           自然の恵みを活かした原料をもとに、健康食品・化粧品などのOEM開発・卸販売を行っています。
@@ -562,10 +562,10 @@
             <div class="flex items-center justify-center gap-4 sm:gap-6">
               <img src="./assets/images/sub-left.webp" alt="TEWAコーポレーションの特徴"
                 class="w-[200px] h-[70px] sm:w-[200px] sm:h-[50px] animate-on-scroll opacity-0"
-                data-animate="animate__fadeInLeft" style="--animate-duration: .9s; --animate-delay: 0.3s;" />
+                data-animate="animate__fadeInUp" style="--animate-duration: .9s; --animate-delay: 0.3s;" />
               <img src="./assets/images/sub-right.webp" alt="TEWAコーポレーションの特徴"
                 class="w-[200px] h-[70px] sm:w-[200px] sm:h-[50px] animate-on-scroll opacity-0"
-                data-animate="animate__fadeInRight" style="--animate-duration: .9s; --animate-delay: 0.5s;" />
+                data-animate="animate__fadeInUp" style="--animate-duration: .9s; --animate-delay: 0.5s;" />
             </div>
           </div>
 
@@ -600,22 +600,22 @@
           data-animate="animate__fadeInUp" style="--animate-duration: 1.1s;">
           <div class="w-full md:w-[75%] relative swiper-container featured-swiper overflow-hidden">
             <div class="swiper-wrapper h-full">
-              <div class="relative swiper-slide h-full animate-on-scroll opacity-0" data-animate="animate__zoomIn"
+              <div class="relative swiper-slide h-full animate-on-scroll opacity-0" data-animate="animate__fadeInUp"
                 style="--animate-duration: 1s; --animate-delay: 0.1s;">
                 <div class="absolute inset-0 bg-[#01326a66]"></div>
                 <img src="assets/images/goods/6.webp" alt="Feature 1" class="w-full h-full object-cover">
               </div>
-              <div class="relative swiper-slide h-full animate-on-scroll opacity-0" data-animate="animate__zoomIn"
+              <div class="relative swiper-slide h-full animate-on-scroll opacity-0" data-animate="animate__fadeInUp"
                 style="--animate-duration: 1s; --animate-delay: 0.3s;">
                 <div class="absolute inset-0 bg-[#01326a66]"></div>
                 <img src="assets/images/goods/2.webp" alt="Feature 2" class="w-full h-full object-cover">
               </div>
-              <div class="relative swiper-slide h-full animate-on-scroll opacity-0" data-animate="animate__zoomIn"
+              <div class="relative swiper-slide h-full animate-on-scroll opacity-0" data-animate="animate__fadeInUp"
                 style="--animate-duration: 1s; --animate-delay: 0.5s;">
                 <div class="absolute inset-0 bg-[#01326a66]"></div>
                 <img src="assets/images/goods/5.webp" alt="Feature 3" class="w-full h-full object-cover">
               </div>
-              <div class="relative swiper-slide h-full animate-on-scroll opacity-0" data-animate="animate__zoomIn"
+              <div class="relative swiper-slide h-full animate-on-scroll opacity-0" data-animate="animate__fadeInUp"
                 style="--animate-duration: 1s; --animate-delay: 0.7s;">
                 <div class="absolute inset-0 bg-[#01326a66]"></div>
                 <img src="assets/images/goods/4.webp" alt="Feature 4" class="w-full h-full object-cover">
@@ -625,7 +625,7 @@
           </div>
           <div thumbsSlider=""
             class="w-full md:w-[25%] h-[100px] md:h-full max-h-[750px] swiper-container featured-thumbs-swiper animate-on-scroll opacity-0"
-            data-animate="animate__fadeInRight" style="--animate-duration: 1s; --animate-delay: 0.5s;">
+            data-animate="animate__fadeInUp" style="--animate-duration: 1s; --animate-delay: 0.5s;">
             <div class="swiper-wrapper h-full">
               <div class="swiper-slide h-full" data-index="0" tabindex="0">
                 <img src="assets/images/goods/6.webp" alt="Feature 1"
@@ -650,32 +650,32 @@
           class="grid grid-cols-3 grid-rows-2 gap-0.5 font-sans text-[10px] md:text-[14px] w-full items-center justify-center text-center sm:grid-cols-3 sm:grid-rows-2 md:grid-cols-6 md:grid-rows-1">
           <div
             class="flex items-center justify-center h-10 md:h-16 bg-sky-200 text-black [clip-path:polygon(0%_0%,90%_0%,100%_50%,90%_100%,0%_100%,10%_50%)] animate-on-scroll opacity-0"
-            data-animate="animate__fadeInLeft" style="--animate-duration: 0.8s">
+            data-animate="animate__fadeInUp" style="--animate-duration: 0.8s">
             お問い合わせ
           </div>
           <div
             class="flex items-center justify-center h-10 md:h-16 bg-sky-200 text-black [clip-path:polygon(0%_0%,90%_0%,100%_50%,90%_100%,0%_100%,10%_50%)] animate-on-scroll opacity-0"
-            data-animate="animate__fadeInLeft" style="--animate-duration: 0.8s; --animate-delay: 0.1s">
+            data-animate="animate__fadeInUp" style="--animate-duration: 0.8s; --animate-delay: 0.1s">
             ヒアリング／ご提案
           </div>
           <div
             class="flex items-center justify-center h-10 md:h-16 bg-sky-200 text-black [clip-path:polygon(0%_0%,90%_0%,100%_50%,90%_100%,0%_100%,10%_50%)] animate-on-scroll opacity-0"
-            data-animate="animate__fadeInLeft" style="--animate-duration: 0.8s; --animate-delay: 0.2s">
+            data-animate="animate__fadeInUp" style="--animate-duration: 0.8s; --animate-delay: 0.2s">
             試作・お見積り
           </div>
           <div
             class="flex items-center justify-center h-10 md:h-16 bg-sky-200 text-black [clip-path:polygon(0%_0%,90%_0%,100%_50%,90%_100%,0%_100%,10%_50%)] animate-on-scroll opacity-0"
-            data-animate="animate__fadeInLeft" style="--animate-duration: 0.8s; --animate-delay: 0.3s">
+            data-animate="animate__fadeInUp" style="--animate-duration: 0.8s; --animate-delay: 0.3s">
             ご契約
           </div>
           <div
             class="flex items-center justify-center h-10 md:h-16 bg-sky-200 text-black [clip-path:polygon(0%_0%,90%_0%,100%_50%,90%_100%,0%_100%,10%_50%)] animate-on-scroll opacity-0"
-            data-animate="animate__fadeInLeft" style="--animate-duration: 0.8s; --animate-delay: 0.4s">
+            data-animate="animate__fadeInUp" style="--animate-duration: 0.8s; --animate-delay: 0.4s">
             製造・納品
           </div>
           <div
             class="flex items-center justify-center h-10 md:h-16 bg-sky-200 text-black [clip-path:polygon(0%_0%,90%_0%,100%_50%,90%_100%,0%_100%,10%_50%)] animate-on-scroll opacity-0"
-            data-animate="animate__fadeInLeft" style="--animate-duration: 0.8s; --animate-delay: 0.5s">
+            data-animate="animate__fadeInUp" style="--animate-duration: 0.8s; --animate-delay: 0.5s">
             継続供給<br />サポート
           </div>
         </div>
@@ -700,22 +700,22 @@
           data-animate="animate__fadeInUp" style="--animate-duration:1.1s;">
           <div class="w-full md:w-[75%] relative swiper-container featured-swiper-1 overflow-hidden">
             <div class="swiper-wrapper h-full">
-              <div class="relative swiper-slide h-full animate-on-scroll opacity-0" data-animate="animate__zoomIn"
+              <div class="relative swiper-slide h-full animate-on-scroll opacity-0" data-animate="animate__fadeInUp"
                 style="--animate-duration:0.8s;">
                 <div class="absolute inset-0 bg-[#01326a66]"></div>
                 <img src="assets/images/20.webp" alt="Feature 1" class="w-full h-full object-cover">
               </div>
-              <div class="relative swiper-slide h-full animate-on-scroll opacity-0" data-animate="animate__zoomIn"
+              <div class="relative swiper-slide h-full animate-on-scroll opacity-0" data-animate="animate__fadeInUp"
                 style="--animate-duration:0.8s; --animate-delay:0.15s;">
                 <div class="absolute inset-0 bg-[#01326a66]"></div>
                 <img src="assets/images/21.webp" alt="Feature 2" class="w-full h-full object-cover">
               </div>
-              <div class="relative swiper-slide h-full animate-on-scroll opacity-0" data-animate="animate__zoomIn"
+              <div class="relative swiper-slide h-full animate-on-scroll opacity-0" data-animate="animate__fadeInUp"
                 style="--animate-duration:0.8s; --animate-delay:0.3s;">
                 <div class="absolute inset-0 bg-[#01326a66]"></div>
                 <img src="assets/images/22.webp" alt="Feature 3" class="w-full h-full object-cover">
               </div>
-              <div class="relative swiper-slide h-full animate-on-scroll opacity-0" data-animate="animate__zoomIn"
+              <div class="relative swiper-slide h-full animate-on-scroll opacity-0" data-animate="animate__fadeInUp"
                 style="--animate-duration:0.8s; --animate-delay:0.45s;">
                 <div class="absolute inset-0 bg-[#01326a66]"></div>
                 <img src="assets/images/23.webp" alt="Feature 4" class="w-full h-full object-cover">
@@ -726,22 +726,22 @@
           <div thumbsSlider=""
             class="w-full md:w-[25%] h-[100px] md:h-full max-h-[750px] swiper-container featured-thumbs-swiper-1">
             <div class="swiper-wrapper h-full">
-              <div class="swiper-slide h-full animate-on-scroll opacity-0" data-animate="animate__fadeInRight"
+              <div class="swiper-slide h-full animate-on-scroll opacity-0" data-animate="animate__fadeInUp"
                 style="--animate-duration:0.7s;" data-index="0" tabindex="0">
                 <img src="assets/images/20.webp" alt="Feature 1"
                   class="w-full h-full object-cover cursor-pointer featured-thumb-img">
               </div>
-              <div class="swiper-slide h-full animate-on-scroll opacity-0" data-animate="animate__fadeInRight"
+              <div class="swiper-slide h-full animate-on-scroll opacity-0" data-animate="animate__fadeInUp"
                 style="--animate-duration:0.7s; --animate-delay:0.12s;" data-index="1" tabindex="0">
                 <img src="assets/images/21.webp" alt="Feature 2"
                   class="w-full h-full object-cover cursor-pointer featured-thumb-img">
               </div>
-              <div class="swiper-slide h-full animate-on-scroll opacity-0" data-animate="animate__fadeInRight"
+              <div class="swiper-slide h-full animate-on-scroll opacity-0" data-animate="animate__fadeInUp"
                 style="--animate-duration:0.7s; --animate-delay:0.24s;" data-index="2" tabindex="0">
                 <img src="assets/images/22.webp" alt="Feature 3"
                   class="w-full h-full object-cover cursor-pointer featured-thumb-img">
               </div>
-              <div class="swiper-slide h-full animate-on-scroll opacity-0" data-animate="animate__fadeInRight"
+              <div class="swiper-slide h-full animate-on-scroll opacity-0" data-animate="animate__fadeInUp"
                 style="--animate-duration:0.7s; --animate-delay:0.36s;" data-index="3" tabindex="0">
                 <img src="assets/images/23.webp" alt="Feature 4"
                   class="w-full h-full object-cover cursor-pointer featured-thumb-img">
@@ -754,32 +754,32 @@
           class="grid grid-cols-3 grid-rows-2 gap-0.5 font-sans text-[10px] md:text-[14px] w-full items-center justify-center text-center sm:grid-cols-3 sm:grid-rows-2 md:grid-cols-6 md:grid-rows-1">
           <div
             class="flex items-center justify-center h-10 md:h-16 bg-sky-200 text-black [clip-path:polygon(0%_0%,90%_0%,100%_50%,90%_100%,0%_100%,10%_50%)] animate-on-scroll opacity-0"
-            data-animate="animate__fadeInLeft" style="--animate-duration: 0.8s">
+            data-animate="animate__fadeInUp" style="--animate-duration: 0.8s">
             お問い合わせ
           </div>
           <div
             class="flex items-center justify-center h-10 md:h-16 bg-sky-200 text-black [clip-path:polygon(0%_0%,90%_0%,100%_50%,90%_100%,0%_100%,10%_50%)] animate-on-scroll opacity-0"
-            data-animate="animate__fadeInLeft" style="--animate-duration: 0.8s; --animate-delay: 0.1s">
+            data-animate="animate__fadeInUp" style="--animate-duration: 0.8s; --animate-delay: 0.1s">
             ヒアリング／ご提案
           </div>
           <div
             class="flex items-center justify-center h-10 md:h-16 bg-sky-200 text-black [clip-path:polygon(0%_0%,90%_0%,100%_50%,90%_100%,0%_100%,10%_50%)] animate-on-scroll opacity-0"
-            data-animate="animate__fadeInLeft" style="--animate-duration: 0.8s; --animate-delay: 0.2s">
+            data-animate="animate__fadeInUp" style="--animate-duration: 0.8s; --animate-delay: 0.2s">
             試作・お見積り
           </div>
           <div
             class="flex items-center justify-center h-10 md:h-16 bg-sky-200 text-black [clip-path:polygon(0%_0%,90%_0%,100%_50%,90%_100%,0%_100%,10%_50%)] animate-on-scroll opacity-0"
-            data-animate="animate__fadeInLeft" style="--animate-duration: 0.8s; --animate-delay: 0.3s">
+            data-animate="animate__fadeInUp" style="--animate-duration: 0.8s; --animate-delay: 0.3s">
             ご契約
           </div>
           <div
             class="flex items-center justify-center h-10 md:h-16 bg-sky-200 text-black [clip-path:polygon(0%_0%,90%_0%,100%_50%,90%_100%,0%_100%,10%_50%)] animate-on-scroll opacity-0"
-            data-animate="animate__fadeInLeft" style="--animate-duration: 0.8s; --animate-delay: 0.4s">
+            data-animate="animate__fadeInUp" style="--animate-duration: 0.8s; --animate-delay: 0.4s">
             製造・納品
           </div>
           <div
             class="flex items-center justify-center h-10 md:h-16 bg-sky-200 text-black [clip-path:polygon(0%_0%,90%_0%,100%_50%,90%_100%,0%_100%,10%_50%)] animate-on-scroll opacity-0"
-            data-animate="animate__fadeInLeft" style="--animate-duration: 0.8s; --animate-delay: 0.5s">
+            data-animate="animate__fadeInUp" style="--animate-duration: 0.8s; --animate-delay: 0.5s">
             継続供給<br />サポート
           </div>
         </div>
@@ -802,7 +802,7 @@
           </p>
           <div class="grid grid-cols-1 sm:grid-cols-3 gap-2 sm:gap-4 md:gap-8 lg:gap-14 w-full mt-6">
             <!-- Item 1 -->
-            <div class="bg-white rounded-md shadow p-6 flex flex-col items-center text-left animate-on-scroll opacity-0"
+            <div class="bg-white shadow p-8 flex flex-col items-center text-left animate-on-scroll opacity-0"
               data-animate="animate__fadeInUp" style="--animate-duration: 0.9s; --animate-delay: 0.3s">
               <div class="text-[12px] md:text-[20px] font-bold mb-2 sm:mb-4 md:mb-8 text-black text-center">
                 販促物の制作支援
@@ -815,10 +815,10 @@
               </div>
             </div>
             <!-- Item 2 -->
-            <div class="bg-white rounded-md shadow p-6 flex flex-col items-center text-left animate-on-scroll opacity-0"
+            <div class="bg-white shadow p-6 flex flex-col items-center text-left animate-on-scroll opacity-0"
               data-animate="animate__fadeInUp" style="--animate-duration: 0.9s; --animate-delay: 0.5s">
               <div class="text-[12px] md:text-[20px] font-bold mb-2 sm:mb-4 md:mb-8 text-black text-center">
-                スタッフ向け教育 勉強会サポート
+                スタッフ向け教育<br />勉強会サポート
               </div>
               <div class="text-[12px] md:text-[16px] text-gray-700">
                 現場スタッフが製品の特徴や使用方法を正しく理解することで、顧客への説明や提案力が向上します。
@@ -829,10 +829,10 @@
               </div>
             </div>
             <!-- Item 3 -->
-            <div class="bg-white rounded-md shadow p-6 flex flex-col items-center text-left animate-on-scroll opacity-0"
+            <div class="bg-white shadow p-6 flex flex-col items-center text-left animate-on-scroll opacity-0"
               data-animate="animate__fadeInUp" style="--animate-duration: 0.9s; --animate-delay: 0.7s">
               <div class="text-[12px] md:text-[20px] font-bold mb-2 sm:mb-4 md:mb-8 text-black text-center">
-                販売データを活用した 継続フォロー・改善提案
+                販売データを活用した<br />継続フォロー・改善提案
               </div>
               <div class="text-[12px] md:text-[16px] text-gray-700">
                 導入後もパートナー企業とともに販売データや顧客の声を分析し、
