--- a/links.html
+++ b/links.html
@@ -603,17 +603,18 @@
               <ul class="flex flex-col gap-2 w-full mt-4 sm:mt-6 ml-2 sm:ml-4">
                 <li class="flex items-start gap-2 animate-on-scroll opacity-0" data-animate="animate__fadeInUp">
                   <img
-                    src="./assets/images/link_icon.webp"
-                    alt="リンクアイコン"
+                    src="https://www.mhlw.go.jp/favicon.ico"
+                    onerror="this.onerror=null;this.src='./assets/images/link_icon.webp';"
+                    alt="厚生労働省のファビコン"
                     width="20"
                     height="20"
                     class="shrink-0 mt-[2px] inline-block align-middle"
                   />
                   <a
-                    href="#"
+                    href="https://www.mhlw.go.jp/"
                     class="text-gray-800 underline hover:text-brand transition-colors text-sm sm:text-base md:text-lg"
-                    >厚生労働省</a
-                  >
+                    target="_blank" rel="noopener"
+                  >厚生労働省</a>
                 </li>
                 <li class="flex items-start gap-2 animate-on-scroll opacity-0" data-animate="animate__fadeInUp" style="animation-delay: 0.15s;">
                   <img
